--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <h3>CONTATO</h3>
                         <li>leticiallessa4@gmail.com</li>
                         <li>telefone: 27998190121 </li>
-                        <li><a href="https://github.com/Leticialessa"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/1200px-GitHub_Invertocat_Logo.svg.png" alt="git hub" class="imagem-icons"> </a> </li>
+                        <li><a href="https://github.com/Leticialessa"> <img src="https://cdn.pixabay.com/photo/2022/01/30/13/33/github-6980894_1280.png" alt="git hub" class="imagem-icons"> </a> </li>
                     </div>
                 </div>
             </div>
